# iafdb-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  TEMPLATE_USAGE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  usage.md
examples/: iafdb_classifier.yaml  iafdb_classifier_unlabeled.yaml  iafdb_healthy_default.yaml  iafdb_healthy_sanchez.yaml  iafdb_healthy_sanchez_class.yaml  iafdb_healthy_with_bank_id.yaml  iafdb_noise_absolute.yaml  iafdb_noise_percentile.yaml  iafdb_noise_with_bank_id.yaml  iafdb_pretrain.yaml
project/: README.md  architecture.md  roadmap.md
src/myocard_iafdb_pipeline/: __init__.py  constants.py  download.py  ids.py  records.py
src/myocard_iafdb_pipeline/cli/: __init__.py  _config.py  download_cmd.py  export_bank_cmd.py  export_noise_bank_cmd.py  inspect_cmd.py
src/myocard_iafdb_pipeline/export/: __init__.py  bank_export.py  noise_export.py
src/myocard_package_name/: __init__.py
tests/: conftest.py  test_bank_export.py  test_bank_ids.py  test_cli_config.py  test_smoke.py
