# ---------------------------------------------------------------------------
# pyproject.toml — myocard-labs python template
#
# Find/replace before publishing:
#   myocard-package-name   → PyPI distribution name (dash-separated, with myocard- prefix)
#   myocard_package_name   → Python import name (underscore-separated)
#   PACKAGE_DESCRIPTION    → one-line summary used by PyPI
#   GITHUB_REPO_NAME       → bare repo name (no myocard- prefix)
#
# Convention recap (LOCKED-IN 2026-06-13, see intracardiac-platform/project/refactor_checklist.md):
#   GitHub repo  : egm-contracts                  (bare)
#   PyPI dist    : myocard-egm-contracts          (myocard- prefix)
#   Import name  : myocard_egm_contracts          (underscore)
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "myocard-package-name"
version = "0.1.0"
description = "PACKAGE_DESCRIPTION"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Daniel Klein", email = "daniel.anthony.klein.88@gmail.com" },
]
keywords = ["cardiac", "electrophysiology", "signal-processing", "egm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  # Runtime deps go here. Keep this lean. Common floor: numpy + h5py.
  # "numpy>=1.26",
  # "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "nbstripout>=0.7",
]

[project.urls]
Homepage      = "https://github.com/myocard-labs/GITHUB_REPO_NAME"
Repository    = "https://github.com/myocard-labs/GITHUB_REPO_NAME"
Issues        = "https://github.com/myocard-labs/GITHUB_REPO_NAME/issues"
Organization  = "https://github.com/myocard-labs"

# Optional CLI entry points — uncomment + edit when the package ships commands.
# [project.scripts]
# myocard-foo = "myocard_package_name.cli:main"

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/myocard_package_name"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "README.md",
  "LICENSE",
  "NOTICE",
  "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"__init__.py"   = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
filterwarnings = [
  "error",
  # Add per-package allowlist below as needed, e.g.:
  # "ignore::DeprecationWarning:some_third_party_lib",
]

[tool.coverage.run]
source = ["src/myocard_package_name"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src", "tests"]

# Per-module overrides for libraries without type stubs.
# Uncomment + edit when the package starts importing one of these.
# Listing them here when the imports aren't present triggers
# `warn_unused_configs` and clutters the mypy output.
#
# [[tool.mypy.overrides]]
# module = [
#   "h5py.*",
#   "scipy.*",
#   "matplotlib.*",
# ]
# ignore_missing_imports = true
